--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,7 @@
         "react-youtube": "^7.13.1",
         "sass": "^1.43.3"
     },
-    "proxy": "https://admin.koleznev.by",
+    "proxy": "http://178.172.165.101/koleznev",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
